kubernetes/app/frontend-backend-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-backend-route 
spec:
  gateways:
  - istio-system/istio-ingress-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /api/hello
        exact: /error
    route:
    - destination:
        host: backend-service.prod.svc.cluster.local
        port:
          number: 5000
    fault:
      delay:
        percentage:
          value: 10 
        fixedDelay: 10s
  - route:
    - destination:
        host: frontend-service.prod.svc.cluster.local
        port:
          number: 5050
    fault:
      abort:
        percentage:
          value: 10 
        httpStatus: 500
